Angular UI update

--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -85,7 +85,7 @@
             <div class="col-md-3 left_col">
               <div class="left_col scroll-view">
                 <div class="navbar nav_title" style="border: 0;">
-                  <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span><?php echo $this->translate('Jeux de Mots Ikbal - Jimmy') ?></span></a>
+                  <a href="/" class="site_title"><i class="glyphicon glyphicon-book"></i> <span><?php echo $this->translate('Jeux de mots') ?></span></a>
                 </div>
 
                 <!-- 
@@ -202,131 +202,98 @@
 
                 <!-- /menu footer buttons -->
                 <div class="sidebar-footer hidden-small">
-                  <a data-toggle="tooltip" data-placement="top" title="Settings">
-                    <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
-                  </a>
-                  <a data-toggle="tooltip" data-placement="top" title="FullScreen">
-                    <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
-                  </a>
-                  <a data-toggle="tooltip" data-placement="top" title="Lock">
-                    <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
-                  </a>
-                  <a data-toggle="tooltip" data-placement="top" title="Logout">
-                    <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-                  </a>
+                  
                 </div>
                 <!-- /menu footer buttons -->
               </div>
             </div>
 
             <!-- top navigation -->
-            <div class="top_nav">
-              <div class="nav_menu">
-                <nav>
-                  <div class="nav toggle">
-                    <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-                  </div>
+            <!-- top navigation -->
+        <div class="top_nav">
+          <div class="nav_menu" style="margin-bottom: 0px;">
+            <nav>
+              <div class="nav toggle">
+                <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+              </div>
+                    <?php //echo $this->translate('Dic - Jeux de Mots Ikbal - Jimmy') ?>
+                
+              <ul class="nav navbar-nav navbar-right">
+                <li class="">
+                  
+                  
+                </li>
 
-                  <ul class="nav navbar-nav navbar-right">
-                    <li class="">
-                      <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                        <img src="images/img.jpg" alt="">John Doe
-                        <span class=" fa fa-angle-down"></span>
+                <li role="presentation" class="dropdown">
+                  <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
+                    <i class="fa fa-envelope-o"></i>
+                    <span class="badge bg-green">6</span>
+                  </a>
+                  <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
+                    <li>
+                      <a>
+                        <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
+                        <span>
+                          <span>John Smith</span>
+                          <span class="time">3 mins ago</span>
+                        </span>
+                        <span class="message">
+                          Film festivals used to be do-or-die moments for movie makers. They were where...
+                        </span>
                       </a>
-                      <ul class="dropdown-menu dropdown-usermenu pull-right">
-                        <li><a href="javascript:;"> Profile</a></li>
-                        <li>
-                          <a href="javascript:;">
-                            <span class="badge bg-red pull-right">50%</span>
-                            <span>Settings</span>
-                          </a>
-                        </li>
-                        <li><a href="javascript:;">Help</a></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a></li>
-                      </ul>
-                    </li>
-
-                    <li role="presentation" class="dropdown">
-                      <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false">
-                        <i class="fa fa-envelope-o"></i>
-                        <span class="badge bg-green">6</span>
-                      </a>
-                      <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
-                        <li>
-                          <a>
-                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                            <span>
-                              <span>John Smith</span>
-                              <span class="time">3 mins ago</span>
-                            </span>
-                            <span class="message">
-                              Film festivals used to be do-or-die moments for movie makers. They were where...
-                            </span>
-                          </a>
-                        </li>
-                        <li>
-                          <a>
-                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                            <span>
-                              <span>John Smith</span>
-                              <span class="time">3 mins ago</span>
-                            </span>
-                            <span class="message">
-                              Film festivals used to be do-or-die moments for movie makers. They were where...
-                            </span>
-                          </a>
-                        </li>
-                        <li>
-                          <a>
-                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                            <span>
-                              <span>John Smith</span>
-                              <span class="time">3 mins ago</span>
-                            </span>
-                            <span class="message">
-                              Film festivals used to be do-or-die moments for movie makers. They were where...
-                            </span>
-                          </a>
-                        </li>
-                        <li>
-                          <a>
-                            <span class="image"><img src="images/img.jpg" alt="Profile Image" /></span>
-                            <span>
-                              <span>John Smith</span>
-                              <span class="time">3 mins ago</span>
-                            </span>
-                            <span class="message">
-                              Film festivals used to be do-or-die moments for movie makers. They were where...
-                            </span>
-                          </a>
-                        </li>
-                        <li>
-                          <div class="text-center">
-                            <a>
-                              <strong>See All Alerts</strong>
-                              <i class="fa fa-angle-right"></i>
-                            </a>
-                          </div>
-                        </li>
-                      </ul>
                     </li>
                   </ul>
-                </nav>
-              </div>
-            </div>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
             <!-- /top navigation -->
 
             <!-- page content -->
-            <div class="right_col" role="main">
+            <style type="text/css">
+                my-app-a::before{
+                    content: '';
+                    position: fixed;
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background: url(assets/img/sky-bg.jpg) no-repeat center center;
+                    background-size: cover;
+                    will-change: transform;
+                    z-index: 0;
+                }
+                .backgroud_sky_ {
+                    content: '';
+                    /* position: absolute; */
+                    width: 100%;
+                    height: 100%;
+                    top: 0;
+                    left: 0;
+                    background: url(assets/img/sky-bg.jpg) no-repeat center center;
+                    background-size: cover;
+                    will-change: transform;
+                    z-index: 0;
+                    overflow: hidden;
+                    display: block;
+                    padding: 0 !important;
+                    min-height: 600px;
+                    overflow: hidden;
+                }
+
+            </style>
+            <div class="right_col" role="main" style="padding-none: 0px 0px 0;">
+                <div class="backgroud_sky">
                     <!-- top tiles -->
                     <div class="row tile_count">
 
                     </div>
                     <!-- /top tiles -->
-
-                    <?php echo $this->content; ?>
-                
-            
+                    <div class="row tile_count" style="padding: 20px;">
+                        <?php echo $this->content; ?>
+                    </div>
+                </div>
             </div>
             <!-- /page content -->
 
@@ -382,6 +349,12 @@
         <!-- Custom Theme Scripts -->
         <script src="template/build/js/custom.min.js"></script>
 
+        <script>
+        $(document).ready(function(){
+            $('[data-toggle="tooltip"]').tooltip(); 
+            
+        });
+        </script>
         
     </body>
 </html>
