--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -83,6 +83,7 @@
         -->
         <div class="container body">
           <div class="main_container">
+            <div class="col-md-3 left_col menu_fixed">
               <div class="left_col scroll-view">
                 <div class="navbar nav_title" style="border: 0;">
                   <a href="/" class="site_title"><i class="glyphicon glyphicon-book"></i> <span><?php echo $this->translate('Jeux de mots') ?></span></a>
@@ -137,7 +138,6 @@
                       
                     </ul>
                   </div>
-
                 </div>
                 <!-- /sidebar menu -->
 
