Angular menu Jquery init Colors tmp

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -5,9 +5,12 @@
     <p> Pour l'instant il n'y pas de connection à la base de donnés dans le serveur. </p>
 </div>
 -->
+  <div>
+    <my-app>Loading Angular 2...</my-app>
+  </div>
+    
 
 
-<my-app>Loading Angular 2...</my-app>
 
 <!--
 <div class="x_content">
