--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -17,15 +17,13 @@
 
                //->prependStylesheet($this->basePath('template/build/css/custom.min.css'))
                ->prependStylesheet($this->basePath('template/build/css/custom.css'))
-               ->prependStylesheet($this->basePath('template/vendors/jqvmap/dist/jqvmap.min.css'))
-               ->prependStylesheet($this->basePath('template/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css'))
+               //->prependStylesheet($this->basePath('template/vendors/jqvmap/dist/jqvmap.min.css'))
+               //->prependStylesheet($this->basePath('template/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css'))
                ->prependStylesheet($this->basePath('template/vendors/iCheck/skins/flat/green.css'))
-               ->prependStylesheet($this->basePath('template/vendors/nprogress/nprogress.css'))
+               //->prependStylesheet($this->basePath('template/vendors/nprogress/nprogress.css'))
                ->prependStylesheet($this->basePath('template/vendors/font-awesome/css/font-awesome.min.css'))
                ->prependStylesheet($this->basePath('template/vendors/bootstrap/dist/css/bootstrap.min.css'))
-
         ?>
-
         <!-- Scripts -->
         <?php echo $this->headScript()
             ->prependFile($this->basePath('systemjs.config.js'))
@@ -33,25 +31,6 @@
             ->prependFile("https://unpkg.com/reflect-metadata@0.1.3")
             ->prependFile("https://unpkg.com/zone.js@0.6.25?main=browser")
             ->prependFile("https://unpkg.com/core-js/client/shim.min.js")
-            /*
-            
-            ->prependFile($this->basePath('js/bootstrap.min.js'))
-            ->prependFile($this->basePath('js/jquery.min.js'))
-            ->prependFile($this->basePath('js/respond.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',))
-            ->prependFile($this->basePath('js/html5shiv.min.js'),   'text/javascript', array('conditional' => 'lt IE 9',))
-             */
-
-            //<!-- Polyfill(s) for older browsers -->
-            /*
-            
-            <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
-
-            <script src="https://unpkg.com/zone.js@0.6.25?main=browser"></script>
-            <script src="https://unpkg.com/reflect-metadata@0.1.3"></script>
-            <script src="https://unpkg.com/systemjs@0.19.27/dist/system.src.js"></script>
-
-            <script src="systemjs.config.js"></script>
-             */
         ; ?>
         <script>
             System.import('app').catch(function(err){ console.error(err); });
@@ -59,28 +38,6 @@
 
     </head>
     <body class="nav-md footer_fixed-">
-        <!--
-        <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="<?php echo $this->url('home') ?>"><img src="<?php echo $this->basePath('img/zf2-logo.png') ?>" alt="Jeux de Mots"/>&nbsp;<?php echo $this->translate('Jeux de Mots') ?></a>
-                </div>
-                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav">
-                        <li class="active"><a href="<?php echo $this->url('home') ?>"><?php echo $this->translate('Home') ?></a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="container">
-            
-        </div>
-        -->
         <?php echo $this->content; ?>
         <?php echo $this->inlineScript() ?>
         <!-- jQuery -->
@@ -88,49 +45,9 @@
         <!-- Bootstrap -->
         <script src="template/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
         <!-- FastClick -->
-        <script src="template/vendors/fastclick/lib/fastclick.js"></script>
-        <!-- NProgress -->
-        <script src="template/vendors/nprogress/nprogress.js"></script>
-        <!-- Chart.js -->
-        <script src="template/vendors/Chart.js/dist/Chart.min.js"></script>
-        <!-- gauge.js -->
-        <script src="template/vendors/gauge.js/dist/gauge.min.js"></script>
-        <!-- bootstrap-progressbar -->
-        <script src="template/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-        <!-- iCheck -->
-        <script src="template/vendors/iCheck/icheck.min.js"></script>
-        <!-- Skycons -->
-        <script src="template/vendors/skycons/skycons.js"></script>
-        <!-- Flot -->
-        <script src="template/vendors/Flot/jquery.flot.js"></script>
-        <script src="template/vendors/Flot/jquery.flot.pie.js"></script>
-        <script src="template/vendors/Flot/jquery.flot.time.js"></script>
-        <script src="template/vendors/Flot/jquery.flot.stack.js"></script>
-        <script src="template/vendors/Flot/jquery.flot.resize.js"></script>
-        <!-- Flot plugins -->
-        <script src="template/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-        <script src="template/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-        <script src="template/vendors/flot.curvedlines/curvedLines.js"></script>
-        <!-- DateJS -->
-        <script src="template/vendors/DateJS/build/date.js"></script>
-        <!-- JQVMap -->
-        <script src="template/vendors/jqvmap/dist/jquery.vmap.js"></script>
-        <script src="template/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-        <script src="template/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
-        <!-- bootstrap-daterangepicker -->
-        <script src="js/moment/moment.min.js"></script>
-        <script src="js/datepicker/daterangepicker.js"></script>
 
         <!-- Custom Theme Scripts -->
         <script src="template/build/js/custom.min.js"></script>
         <script src="js/custom_jeux_de_mots.js"></script>
-
-        <script>
-        $(document).ready(function(){
-            $('[data-toggle="tooltip"]').tooltip(); 
-            
-        });
-        </script>
-        
     </body>
 </html>
