NewWord /Historique/PageScroll/

--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -108,15 +108,15 @@
   <div class="animated_div_left" style="font-size: 1.5em; top: 20%; color:#a7ccc4">Échouer</div>
   <div class="animated_div_right" style="top: 20%; color: #ff2d39">Printemps</div>
   <div class="animated_div_left" style="top: 30%; color: #1b998a;">Chanson</div>
-  <div class="animated_div_right" style="top: 35%; color: #ffb358;">Copains</div>
+  <div class="animated_div_right" style="top: 35%; color: #CCCC00;">Copains</div>
   <div class="animated_div_left" style="font-size: 3em; top: 40%; color: #EF5184;">Amis</div>
   <div class="animated_div_right" style="top: 40%; color: #1ec7e6;">Fétefora</div>
-  <div class="animated_div_left" style="top: 50%; color: #7d8413;">Chimie</div>
+  <div class="animated_div_left" style="top: 50%; color: #1ec7e6;">Chimie</div>
   <div class="animated_div_right" style="top: 50%; color: #e0c544;">Musique</div>
-  <div class="animated_div_right" style="top: 60%; color: #1ec7e6;">SVT</div>
-  <div class="animated_div_left" style="top: 65%; color: #FFFECF;">Vélo</div>
-  <div class="animated_div_right" style="top: 70%; color: #1ec7e6;">Sports</div>
-  <div class="animated_div_left" style="top: 70%; color: #1ec7e6;">Réussir</div>
-  <div class="animated_div_left" style="top: 80%; color: #1ec7e6;">Natation</div>
-  <div class="animated_div_right" style="top: 85%; left: 10%; color: #1ec7e6;">Saisons</div>
+  <div class="animated_div_right" style="top: 60%; color: #ffb358;">SVT</div>
+  <div class="animated_div_left" style="top: 65%; color: #7d8413;">Vélo</div>
+  <div class="animated_div_right" style="top: 70%; color: #15CAB1;">Sports</div>
+  <div class="animated_div_left" style="top: 70%; color: #00CCFF;">Réussir</div>
+  <div class="animated_div_left" style="top: 80%; color: #FF6F00;">Natation</div>
+  <div class="animated_div_right" style="top: 85%; left: 10%; color: #CCFF00;">Saisons</div>
 </div>
